--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@stomp/stompjs": "^7.2.0",
     "@tanstack/react-query": "^5.87.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.180.0",
@@ -33,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2",
+    "sockjs-client": "^1.6.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
@@ -44,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sockjs-client": "^1.5.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
