--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/estree": "^1.0.8",
+    "@types/history": "^4.7.11",
     "@types/json-schema": "^7.0.15",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
